Tweede commit foto en text erbij

--- a/src/styles/Navigation.module.css
+++ b/src/styles/Navigation.module.css
@@ -7,12 +7,12 @@
     width: 150px;
     display: flex;
     align-items: center;
-    margin-right: auto; /* Add this line */
+    margin-right: auto;
   }
 
   .titel h1{
     font-size: 50px;
-  
+    font-family: sans-serif;
     
   }
 
