--- a/src/styles/secondPage.module.css
+++ b/src/styles/secondPage.module.css
@@ -5,6 +5,41 @@
 }
 
 .textdecor{
-margin-left: 20px;
+    margin-left: 30px;
+    margin-top: 50px;
 
 }
+
+.image{
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+}
+
+.details{
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.detailsButton {
+    border-radius: 50px;
+    background-color: lightblue;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    transition: background-color 0.3s ease;
+  }
+  
+  .detailsButton:hover {
+    background-color: skyblue;
+  }
+  
+  .detailsButton.active {
+    background-color: skyblue;
+  }
+
+
+
